crates/es-fluent-cli/tests/snapshots/cli_tests__check_force_run.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Checker
Discovered 2 crate(s)
No issues found!

STDERR:
