crates/es-fluent-cli/tests/snapshots/cli_tests__check_ignore_all_crates.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Checker
Discovered 2 crate(s)

STDERR:
No crates with i18n.toml found.
