crates/es-fluent-cli/tests/snapshots/cli_tests__check_ignore_unknown_crate.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Checker
Discovered 2 crate(s)

STDERR:
Error: es_fluent::other

  × Unknown crates passed to --ignore: 'nonexistent-crate'
