crates/es-fluent-cli/tests/snapshots/cli_tests__clean_all.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
Would update FTL file: [TEMP_DIR]/i18n/en/test-app-a.ftl
- z_last = Last
  hello_a = Hello from App A
- orphan_key = Orphan
- 
- shared-Photos = 
+ shared-Photos =
      { $user_name } { $photo_count ->
          [one] added a new photo
         *[other] added { $photo_count } new photos
  ...
          [female] her stream
         *[other] their stream
      }.
- 
  gender-Male = Male
  gender-Female = Female
  gender-Other = Other

Would update FTL file: [TEMP_DIR]/i18n/es/test-app-a.ftl
  hello_a = Hello from App A
- orphan_key = Orphan
- z_last = Last
- 
- orphan-key = Huerfano

Unchanged: test-lib-b

STDERR:
