crates/es-fluent-cli/tests/snapshots/cli_tests__clean_real.snap
---
source: crates/es-fluent-cli/tests/cli_tests.rs
expression: output
---
STDOUT:
Fluent FTL Generator
Discovered 2 crate(s)
test-app-a cleaned in [DURATION](5 resources)
Unchanged: test-lib-b

STDERR:
